--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
             <artifactId>jackson-dataformat-xml</artifactId>
             <version>2.5.2</version>
         </dependency>
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -100,6 +101,16 @@
             <version>4.3.7.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.12</version>
+        </dependency>
     </dependencies>
 
     <repositories>
